<!-- res/layout/comment_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/button_background"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/ic_profile_default"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_text" />


    </LinearLayout>
    <ImageButton
        android:id="@+id/editCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_button"
        android:contentDescription="@string/edit_comment"
        android:padding="15dp"
        android:scaleType="centerInside"
        />


    <ImageButton
        android:id="@+id/deleteCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_delete"
        android:contentDescription="@string/deleteButton"
        android:padding="15dp"
        android:scaleType="centerInside"
        />
</LinearLayout>
